--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ bin/
 # Test binary, built with `go test -c`
 *.test
 
+# Test directories
+test/
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
